made some changes to deploy in vercel

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="campus connect, student, registration, html, css, javascript">
     <meta name="robots" content="INDEX, FOLLOW">
     <title>Student Registration System</title>
-    <link rel="stylesheet" href="./src/output.css">
+    <link rel="stylesheet" href="/src/output.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Poppins&family=Roboto&family=Nunito&display=swap" rel="stylesheet">
 </head>
 
@@ -122,7 +122,7 @@
 
     <!-- Linking Js File -->
 
-    <script src="./src/app.js"></script>
+    <script src="/src/app.js"></script>
 </body>
 <!-- Body Ends -->
 
