--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <main id="main" class="w-[100%] bg-gradient-to-tr from-blue-200 to-pink-200/80 flex flex-row justify-center items-start flex-wrap gap-[7vh] lg:pt-8 lg:gap-x-[10%] lg:overflow-hidden">
 
-        <blockquote class="font-poppins font-bold text-blue-800 w-[100%] text-center text-md hidden lg:flex lg:justify-center lg:items-center">
+        <blockquote class="font-poppins font-bold text-blue-800 w-[100%] text-center hidden lg:flex lg:justify-center lg:items-center lg:text-base">
             Welcome to Campus Connect - Platform to Register and Modify Student Details.
         </blockquote>
 
@@ -58,7 +58,7 @@
 
             <!-- Heading that appears only from xl break point -->
 
-            <h2 class="hidden text-blue-700 text-2xl font-bold font-poppins lg:flex">Registation Section</h2>
+            <h2 class="hidden text-blue-700 text-2xl font-bold font-poppins lg:flex lg:text-lg">Registation Section</h2>
 
             <!-- Form Starts -->
 
@@ -67,28 +67,28 @@
                 <!-- Name Input -->
 
                 <div class="formElement">
-                    <label for="name" class="w-[100%]">Student Name</label>
+                    <label for="name" class="w-[100%] lg:text-sm">Student Name</label>
                     <input class="input" type="text" name="name" placeholder="Rohit Varma Datla" required>
                 </div>
 
                 <!-- Id Input -->
 
                 <div class="formElement">
-                    <label for="id" class="w-[100%]">Student ID</label>
+                    <label for="id" class="w-[100%] lg:text-sm">Student ID</label>
                     <input class="input" type="number" name="id" placeholder="001" required>
                 </div>
 
                 <!-- Email Input -->
 
                 <div class="formElement">
-                    <label for="email" class="w-[100%]">Email</label>
+                    <label for="email" class="w-[100%] lg:text-sm">Email</label>
                     <input class="input invalid:text-pink-600 invalid:border-none invalid:focus:outline-pink-600" type="email" name="email" placeholder="youremail@optional.com">
                 </div>
 
                 <!-- Contact Input -->
 
                 <div class="formElement">
-                    <label for="contact" class="w-[100%]">Contact No</label>
+                    <label for="contact" class="w-[100%] lg:text-sm">Contact No</label>
                     <input class="input" type="number" name="contact" placeholder="9876543210" required>
                 </div>
 
@@ -106,7 +106,7 @@
         <!-- Display Section Starts -->
 
         <section id="displaySection" class="flex flex-col justify-start items-center h-[100vh] w-[100%] text-blue-700 px-4 py-7 gap-[4%] md:w-[70%] lg:w-[40%] lg:p-0 lg:gap-[4%] lg:h-[70vh]">
-            <h2 class="text-2xl font-poppins font-bold">Student Details</h2>
+            <h2 class="text-3xl font-poppins font-bold lg:text-lg">Student Details</h2>
             <div id="display" class="flex flex-col justify-start gap-[2%] items-center bg-white/20 h-[72%] w-[100%] rounded-2xl border-1 border-slate-500 overflow-x-hidden p-3 font-sans lg:h-[82%] lg:gap-[4%] sm:overflow-y-auto sm:scrollbar-thin sm:scrollbar-thumb-blue-400 sm:scrollbar-track-gray-300">
 
                 <!-- Adds Rows Dynamically Using JS -->
